--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 
 body{margin: 0;
-    
+
     
     font-family: 'Poppins', sans-serif;
 
@@ -54,4 +54,12 @@ a.link-icon {
     padding: 7px;
     padding-left: 20px;
     padding-right: 20px;
+}
+
+
+#body-bennar {
+    background-image: url(dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+   
 }
