--- a/style.css
+++ b/style.css
@@ -62,8 +62,12 @@ a.link-icon {
 	background-position: right;
 }
 
-.arifvai {
+#arifvai {
 	display: flex;
+	background-image: url(img/exp-bg.png);
+	background-repeat: no-repeat;
+	background-position: left;
+	
 	
 }
 .content-color{
@@ -71,23 +75,40 @@ a.link-icon {
 }
 
 .developer{
-	width: 50%;
+	width: 35%;
 	float: left;
 	background-color: #FFFFFF;
+	  box-shadow: -3px 11px 34px -5px #888888;
+	padding-left: 10px;
+	margin-right: 20px;
+	border-left: 5px solid #007BFF;
+
 }
+
+
+
+.continer2 {
+    margin-top: 63px;
+}
+
+
 .developer2 {
-	width: 50%;
-	float: left;
-	background-color: #FFFFFF;
+    width: 35%;
+    float: left;
+    box-shadow: -3px 11px 34px -5px #888888;
+    background-color: #FFFFFF;
+	padding-left: 10px;
+	    margin-right: 140px;
+	border-left: 5px solid #FF8D6A;
+/*	margin-right: 5px;*/
 	
 }
-.continer2
-{
-	margin-top: 40px;
+
+
+footer#footer-reppar p {
+    text-align: center;
+    margin-top: 150px;
 }
-
-
-
 
 
 
